# EACopy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: DeltaCompressionResults.md  TechDoc.md  Todo.md  Todo.txt  Usage.md
include/: EACopyClient.h  EACopyDelta.h  EACopyNetwork.h  EACopyServer.h  EACopyShared.h  OLD_EACopyRsync.h
scripts/: build.bat
source/: Addition.manifest  EACopy.cpp  EACopyClient.cpp  EACopyDelta.cpp  EACopyDeltaXDelta.h  EACopyDeltaZstd.h  EACopyNetwork.cpp  EACopyServer.cpp  EACopyService.cpp  EACopyShared.cpp  OLD_EACopyRsync.cpp
test/: CMakeLists.txt  EACopyTest.cpp
